リンク設定

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <div class="row">
               <div class="col-sm-6">
-                <a href="Greening/index.html">
+                <a href="https://ookamiyoujyo.github.io/Greening/">
                   <img class="screenshot" src="images/stela7.png" alt="Greening">
                   <h2 id="greening">Greening</h2>
                 </a>
@@ -117,7 +117,7 @@
 
             <div class="row">
               <div class="col-sm-6">
-                <a href="Hungraviy/index.html">
+                <a href="https://kanata86.github.io/Hungraviy/">
                   <img class="screenshot" src="images/hungraviysuicomi.png" alt="Hungraviy">
                   <h2 id="hungraviy">はんぐらびぃ</h2>
                 </a>
