--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </a>
               </div>
               <div class="col-sm-6">
-                <p>あいうえおあいうえおあいうえお</p>
+                <p>　星を綺麗にするお手伝いの旅をしているステラ。おや？また汚れてしまった星を見つけたようです。花が大好きなステラは星をお掃除することにしました、ステラと一緒に星を綺麗にしましょう！</p>
                 <h3>動作環境</h3>
                 <p>Windows10</p>
               </div>
