--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </a>
               </div>
               <div class="col-sm-6">
-                <p>あいうえおあいうえおあいうえお</p>
+                <p>敵を避けブラックホールで吸い込みながらゴールを目指そう！！</p>
                 <h3>動作環境</h3>
                 <p>Windows10</p>
               </div>
