--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <div class="row">
               <div class="col-sm-6">
-                <a href="https://ookamiyoujyo.github.io/Greening/">
+                <a href="https://ookamiyoujyo.github.io/works/Greening/index.html">
                   <img class="screenshot" src="images/stela7.png" alt="Greening">
                   <h2 id="greening">Greening</h2>
                 </a>
